--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -12,7 +12,7 @@ body,
 #root {
   height: 100%;
   font-family: "Figtree", sans-serif;
-  /* background-color: var(--color-background); */
+  background-color: var(--color-background);
 }
 
 .dark {
