chore: disable eslint rule for now, removed application folder and small tweaks

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -3,6 +3,8 @@
 @plugin "tailwindcss-react-aria-components";
 @import "./theme.css";
 
+@tailwind utilities;
+
 @custom-variant dark (&:where(.dark, .dark *));
 
 html,
