feat: updated add event modal

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap");
 @import "tailwindcss";
 @plugin "tailwindcss-react-aria-components";
+@plugin "tailwindcss-animate";
+
 @import "./theme.css";
 
 @custom-variant dark (&:where(.dark, .dark *));
