--- a/apps/web/src/theme.css
+++ b/apps/web/src/theme.css
@@ -1,6 +1,6 @@
 :root {
-  --surface: oklch(98.015% 0.00011 271.152);
-  --background: var(--color-white);
+  --surface: oklch(96.015% 0.00011 271.152);
+  --background: oklch(97.015% 0.00011 271.152);
   --border: var(--color-zinc-300);
   --accent-main: var(--color-blue-500);
 
