imp: slightly improved content

--- a/apps/api/internal/email/templates/ConfirmationEmail.html
+++ b/apps/api/internal/email/templates/ConfirmationEmail.html
@@ -8,9 +8,20 @@
 </head>
 
 <body>
-  <h1>This is a confirmation email‼😭</h1>
-  <p>But nothing is confirmed</p>
-  <p>Your name is {{ .Name }}
+  <h2>Hi {{ .Name }}, thank you for applying to SwampHacks XI!</h2>
+
+  <p>Next steps</p>
+  <ul>
+    <li>Keep an eye on your inbox!</li>
+    <li><a href="https://discord.com/invite/NfRPv9JtAG">Join our Discord!</a></li>
+    <li><a href="https://www.instagram.com/ufswamphacks/">Follow our instagram!</a></li>
+  </ul>
+
+  <p>Questions?</p>
+  <p>Send an email to contact@swamphacks.com</p>
+
+  <p>Unsubscribe from marketing emails</p>
+
 </body>
 
 </html>
