--- a/apps/api/internal/email/templates/ConfirmationEmail.html
+++ b/apps/api/internal/email/templates/ConfirmationEmail.html
@@ -33,7 +33,7 @@
       <p>
         Application decisions will release <b>December 1st</b>, and team
         formation will become available the week of <b>October 20th</b>. Please
-        make sure to watch for updates.
+        be sure to watch for updates.
       </p>
 
       <h2>Next Steps</h2>
