fix: emails are now queued; chore: cleanup

--- a/apps/api/internal/email/templates/ConfirmationEmail.html
+++ b/apps/api/internal/email/templates/ConfirmationEmail.html
@@ -30,15 +30,15 @@
       </p>
 
       <h2>Important Info</h2>
-      <p>
-        Application decisions will release <b>December 1st</b>, and team
-        formation will become available the week of <b>October 20th</b>. Please
-        be sure to watch for updates.
-      </p>
+      <ul>
+        <li>Application decisions release <strong>December 1st</strong>.</li>
+        <li>Team formation will be available soon in the portal.</li>
+        <li>Sponsors to be annouced soon!</li>
+      </ul>
 
       <h2>Next Steps</h2>
       <ul>
-        <li>Keep an eye on your inbox!</li>
+        <li>Keep an eye on your inbox and/or the portal.</li>
         <li>
           Join our
           <a href="https://discord.com/invite/NfRPv9JtAG"
@@ -121,15 +121,16 @@
         flex: 1 1 auto;
         justify-content: center;
         height: 100%;
+        padding: 1.5rem;
         img {
           transform: rotate(-3deg);
           object-fit: contain;
           max-width: 70lvh;
-          min-width: 20lvh;
+          min-width: 40lvh;
         }
       }
       .container {
-        width: 50lvw;
+        width: 75lvw;
         color: #353535;
         border-radius: 5px;
         padding: 2lvh;
