fix: image changes

--- a/apps/api/internal/email/templates/ConfirmationEmail.html
+++ b/apps/api/internal/email/templates/ConfirmationEmail.html
@@ -17,9 +17,8 @@
     <div class="container">
       <div class="row">
         <img
-          src="https://static.swamphacks.com/email/Postcard_SwampHacks_email_header.png"
+          src="https://static.swamphacks.com/email/Postcard_SwampHacks_email_header_20251013.png"
           alt="Thank you postcard header"
-          id="header"
         />
       </div>
       <h1>Hi {{ .Name }},</h1>
@@ -71,7 +70,7 @@
         </a>
         <a href="https://www.linkedin.com/company/swamphacks/">
           <img
-            src="https://static.swamphacks.com/email/Linkedin_Icon.svg"
+            src="https://static.swamphacks.com/email/Linkedin_Icon_20251013.svg"
             alt="Linkedin icon"
           />
         </a>
