fix: add XI to title

--- a/apps/api/internal/email/templates/ConfirmationEmail.html
+++ b/apps/api/internal/email/templates/ConfirmationEmail.html
@@ -28,7 +28,7 @@
       <tr>
         <td style="padding:10px 20px 30px 20px; text-align:left;">
             <p style="margin:0 0 15px 0; font-size:16px;">
-              Thanks for applying to <strong>SwampHacks!</strong> We’re excited to have you join another year of creativity, collaboration, and coding.
+              Thanks for applying to <strong>SwampHacks XI!</strong> We’re excited to have you join another year of creativity, collaboration, and coding.
             </p>
             
             <h3 style="margin:25px 0 10px 0; font-size:18px; color:#1a73e8;">Important Info</h3>
